# rendu-cxx-template

./: .gitignore  CMakeLists.txt  README.md  revision_data.h.in.cmake
apps/: CMakeLists.txt
apps/launcher/: CMakeLists.txt  main.cpp
cmake/: Config.cmake.in  genrev.cmake  options.cmake  showoptions.cmake  stack_direction.c
cmake/Packaging/: Common.cmake  Components.cmake  Linux.cmake  MacOS.cmake  Windows.cmake
cmake/Project/: BaseHead.cmake  BaseTargets.cmake  CheckBuildDir.cmake  CheckCompiler.cmake  CheckPlatform.cmake  CommonFunction.cmake  Components.cmake  ConfigureBaseTargets.cmake  ConfigureDynamicLinking.cmake  ConfigureScripts.cmake  EnsureVersion.cmake  FindPCHSupport.cmake  GenRevisionData.cmake  GlobalVariables.cmake  GroupSources.cmake  Install.cmake  Options.cmake  OptionsShow.cmake  OptionsWarningCheck.cmake  Policies.cmake  ProjectBase.cmake  RenduProtobufHelper.cmake
cmake/Toolchains/: MacOS-AppleSilicon.cmake  Ubuntu22.cmake  Windows11.cmake
cmake/Utilities/: AutoCollect.cmake  Colors.cmake
cmake/Utils/: Path.cmake  ShowMessage.cmake
cmake/macros/: AutoAddSubdirectory.cmake  AutoCollect.cmake  CheckBuildDir.cmake  CheckPlatform.cmake  CollectDirectories.cmake  CollectFiles.cmake  ConfigureBaseTargets.cmake  ConfigureRenduTargets.cmake  ConfigureScripts.cmake  EnsureVersion.cmake  FindMySQL.cmake  FindOpenSSL.cmake  FindPCHSupport.cmake  FindReadline.cmake  GroupSources.cmake  RenduCMakePolicies.cmake  RenduCheckBuildDir.cmake  RenduCheckPlatform.cmake  (+10 more)
dep/: CMakeLists.txt
dep/protobuf/: CMakeLists.txt  libprotobuf-lite.cmake  libprotobuf.cmake  libprotoc.cmake
dep/valgrind/: CMakeLists.txt
example/: CMakeLists.txt
example/threads/: CMakeLists.txt  example.cpp
example/utf8cpp/: CMakeLists.txt  example.cpp
libs/: CMakeLists.txt
rendu/: CMakeLists.txt
src/: CMakeLists.txt
src/common/: CMakeLists.txt  banner.cpp  banner.h  common.cpp  common.h  compiler_defs.h  define.h  git_revision.cpp  git_revision.h  run_mode.h
src/common/argparse/: argument.h  argument_defines.h  argument_parser.h  argument_template.h
src/common/asio/: io_context.h  ip_address.h  ip_network.h  strand.h
src/common/base/: SFMTRand.cpp  SFMTRand.h  advstd.h  containers.h  duration.h  hash.h  iterator_pair.h  optional.h  random.cpp  random.h  regex.h  sfmt_rand.cpp  sfmt_rand.h  smart_enum.h  string_convert.h  string_format.h  types.h
src/common/command_line/: cli_runnable.cpp  cli_runnable.h
src/common/configuration/: built_in_config.cpp  built_in_config.h  config.cpp  config.h
src/common/debugging/: WheatyExceptionReport.cpp  WheatyExceptionReport.h  errors.cpp  errors.h
src/common/enum/: enum.h  enum_fuse.h  enum_utils.h
src/common/logging/: appender.cpp  appender.h  appender_console.cpp  appender_console.h  appender_file.cpp  appender_file.h  enuminfo_appender_console.cpp  enuminfo_log_common.cpp  log.cpp  log.h  log_common.h  log_file.h  log_message.cpp  log_message.h  log_operation.cpp  log_operation.h  logger.cpp  logger.h
src/common/platform/: ServiceWin32.cpp  ServiceWin32.h
src/common/precompiled_headers/: common_pch.h
src/common/random/: random.cpp  random.h  random_define.h  sfmt_rand.cpp  sfmt_rand.h
src/common/string/: string_convert.h  string_format.h
src/common/time/: duration.h
src/common/utilities/: advstd.h  containers.h  duration.h  hash.h  iterator_pair.h  optional.h  random.cpp  random.h  regex.h  sfmt_rand.cpp  sfmt_rand.h  singleton.h  smart_enum.h  string_convert.h  string_format.h  types.h  util.cpp  util.h  utils.h
src/core/framework/: CMakeLists.txt  app_enum.h  banner.cpp  banner.h  cli_runnable.cpp  program.cpp  program.h
src/core/framework/base/: component_manager.h  program.h
src/core/framework/component/: component_manager.h
src/core/framework/console/: options.cpp  options.h
src/core/framework/precompiled_headers/: framework_pch.h
src/core/framework/services/: service.h
src/core/framework/systems/: config_system.cpp  config_system.h  event_system.cpp  event_system.h  log_system.h  system.h
src/core/shared/: CMakeLists.txt
src/core/shared/json/: protobuf_json.cpp  protobuf_json.h
src/core/shared/serializer/: protobuf_json.cpp  protobuf_json.h
src/core/template/: CMakeLists.txt  main.cpp
src/cores/: CMakeLists.txt
src/cores/framework/: CMakeLists.txt
src/cores/framework/base/: component.cpp  component.h  component_manager.cpp  component_manager.h  program.cpp  program.h  rd_runner.h
src/cores/framework/command_line/: cli_runnable.h
src/cores/framework/precompiled_headers/: framework_pch.h
src/cores/framework/systems/: config_system.h  event_system.cpp  event_system.h  log_system.cpp  log_system.h  system.h
src/cores/helloworld/: CMakeLists.txt  main.cpp
src/example/common/enum/: CMakeLists.txt  example.cpp  example_enum.h
test/: CMakeLists.txt
tests/: CMakeLists.txt  main.cpp  rd_catch.h
tests/common/: CMakeLists.txt
tests/common/container/: test_map.cpp  test_set.cpp  test_vector.cpp
tests/container/: CMakeLists.txt  test_map.cpp  test_set.cpp  test_vector.cpp
tests/enum/: test_aliases.cpp  test_flags.cpp  test_main.cpp
tests/protobuf/: CMakeLists.txt
tests/rendu/: CMakeLists.txt
tests/rendu/core/base/: test_compressed_pair.cpp  test_enum.cpp  test_iterator.cpp  test_memory.cpp  test_type_info.cpp
tests/rendu/core/container/: test_dense_set.cpp
tests/rendu/core/define/: test_version.cpp
tests/rendu/core/ecs/: test_component.cpp  test_ecs_pwd.h  test_entity.cpp  test_storage.cpp  test_view.cpp
tests/rendu/core/locator/: test_locator.cpp
tests/rendu/core/meta/: test_meta_any.cpp  test_meta_base.cpp  test_meta_context.cpp  test_meta_conv.cpp  test_meta_data.cpp  test_meta_dtor.cpp  test_meta_func.cpp  test_meta_fwd.h  test_meta_handle.cpp  test_meta_pointer.cpp  test_meta_range.cpp  test_meta_template.cpp
tests/rendu/core/signal/: test_emitter.cpp
tests/string/: CMakeLists.txt  test_string_utils.cpp  test_string_view.cpp
tests/template/: CMakeLists.txt  test_class.cpp  test_function.cpp
tool/: CMakeLists.txt
tools/: CMakeLists.txt
(+219 files in other folders)
